--- a/accounts/templates/accounts/main.html
+++ b/accounts/templates/accounts/main.html
@@ -15,7 +15,7 @@
     <title>Trackify</title>
 </head>
 
-<body class="bg-dark text-light">
+<body class="bg-secondary text-light">
     {% include 'accounts/navbar.html'%}
 
     {% block content %}
