--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -2,11 +2,13 @@
 
 {% block content%}
 
+{% include 'accounts/status.html'%}
+
 <div class="row">
     <div class="col-md-5">
         <h5>Customers:</h5>
         <hr>
-        <div class="card card-body bg-secondary text">
+        <div class="card card-body bg-dark text">
             <a class="btn btn-success btn-sm btn-block" href="">Create Customer
             </a>
             <table class="table table-sm text-light">
@@ -23,7 +25,7 @@
     <div class="col-md-7">
         <h5>Last 5 Orders</h5>
         <hr>
-        <div class="card card-body bg-secondary text">
+        <div class="card card-body bg-dark text">
             <a class="btn btn-success btn-sm btn-block" href="">Create Order</a>
             <table class="table table-sm text-light">
                 <tr>
