--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand link-light" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,9 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active text-light link-light" href="#">Dashboard<span
+            <a class="nav-item nav-link active text-light link-light" href="/">Dashboard<span
                     class="sr-only"></span></a>
-            <a class="nav-item nav-link link-light" href="#">Products</a>
+            <a class="nav-item nav-link link-light" href="/products">Products</a>
             <a class="nav-item nav-link link-light" href="#">Pricing</a>
         </div>
     </div>
