Customer model created

--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand link-light" href="#">Navbar</a>
+    <img src="/static/images/Logo.png" class="">
+    <a class="navbar-brand link-light" href="#">Trackify</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,7 +10,6 @@
             <a class="nav-item nav-link active text-light link-light" href="/">Dashboard<span
                     class="sr-only"></span></a>
             <a class="nav-item nav-link link-light" href="/products">Products</a>
-            <a class="nav-item nav-link link-light" href="#">Pricing</a>
         </div>
     </div>
 </nav>
