--- a/accounts/templates/accounts/products.html
+++ b/accounts/templates/accounts/products.html
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-md">
-        <h5>Prouducts</h5>
+        <h5>Products</h5>
     </div>
     <div class="card card-body bg-dark">
         <table class="table text-light">
