--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -53,14 +53,23 @@
         <div class="card card-body bg-dark">
             <table class="table table-sm text-light">
                 <tr>
-                    <th>Product
-                    <th>
+                    <th>Product</th>
                     <th>Category</th>
                     <th>Date Ordered</th>
                     <th>Status</th>
                     <th>Update</th>
                     <th>Remove</th>
                 </tr>
+                {% for order in orders%}
+                <tr>
+                    <td>{{order.product}}</td>
+                    <td>{{order.product.category}}</td>
+                    <td>{{order.date_created}}</td>
+                    <td>{{order.status}}</td>
+                    <td><a href="">Update</a></td>
+                    <td><a href="">Remove</a></td>
+                </tr>
+                {% endfor %}
             </table>
         </div>
     </div>
