--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -5,7 +5,7 @@
 {% include 'accounts/status.html'%}
 
 <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-5 mb-3">
         <h5>Customers:</h5>
         <hr>
         <div class="card card-body bg-dark">
@@ -13,11 +13,13 @@
             </a>
             <table class="table table-sm text-light">
                 <tr>
+                    <th></th>
                     <th>Customer</th>
                     <th>Phone Number</th>
                 </tr>
                 {% for customer in customers %}
                 <tr>
+                    <td><a class="btn btn-sm btn-info" href="{% url 'customer' customer.id %}">View</a></td>
                     <td>{{customer.name}}</td>
                     <td>{{customer.phone}}</td>
                 </tr>
@@ -27,7 +29,7 @@
     </div>
 
 
-    <div class="col-md-7">
+    <div class="col-md-7 mb-3">
         <h5>Last 5 Orders</h5>
         <hr>
         <div class="card card-body bg-dark text">
