--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <img src="/static/images/Logo.png" class="">
+    <img src="/static/images/Logo.png" class="" alt="logo">
     <a class="navbar-brand link-light" href="#">Trackify</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,9 +7,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active text-light link-light" href="/">Dashboard<span
+            <a class="nav-item nav-link active text-light link-light" href="{% url 'home' %}">Dashboard<span
                     class="sr-only"></span></a>
-            <a class="nav-item nav-link link-light" href="/products">Products</a>
+            <a class="nav-item nav-link link-light" href="{% url 'products' %}">Products</a>
         </div>
     </div>
 </nav>
