--- a/accounts/templates/accounts/order_form.html
+++ b/accounts/templates/accounts/order_form.html
@@ -1,7 +1,19 @@
-{% extends 'accounts/main_template.html' %}
+{% extends 'accounts/main.html' %}
 {% load static %}
 {% block content %}
 
-<form action="" method="POST">
-    <input type="submit" name="submit">
-</form>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="card card-body bg-dark">
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{form}}
+
+                <input type="submit" name="submit">
+            </form>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
