--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -10,7 +10,8 @@
             <h5>Customer: {{customer.name}}</h5>
             <hr>
             <a class="btn btn-outline-info btn-sm butn-block" href="">Update Customer</a>
-            <a class="btn btn-outline-danger btn-sm btn-block" href="">Delete Customer</a>
+            <a class="btn btn-outline-success btn-sm btn-block" href="{% url 'create_order' customer.id %}">Create New
+                Order</a>
         </div>
     </div>
 
