--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -40,6 +40,7 @@
     <div class="col">
         <div class="card card-body bg-dark">
             <form method="get">
+                {{myFilter.form}}
                 <button class="btn btn-primary" type="submit">Search</button>
             </form>
         </div>
